--- a/package.json
+++ b/package.json
@@ -1,14 +1,17 @@
 {
   "name": "money-management",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/webpack-config": "^0.17.0",
+    "@react-native-async-storage/async-storage": "~1.17.3",
+    "@react-navigation/native": "^6.0.13",
+    "@react-navigation/native-stack": "^6.9.1",
     "axios": "^1.1.3",
     "expo": "~46.0.16",
     "expo-status-bar": "~1.4.0",
@@ -16,15 +19,21 @@
     "react-dom": "18.0.0",
     "react-hook-form": "^7.38.0",
     "react-native": "0.69.6",
+    "react-native-loading-spinner-overlay": "^3.0.1",
     "react-native-modal": "^13.0.1",
+    "react-native-plaid-link-sdk": "^8.0.1",
+    "react-native-safe-area-context": "4.3.1",
+    "react-native-screens": "~3.15.0",
     "react-native-web": "~0.18.7",
-    "@expo/webpack-config": "^0.17.0"
+    "react-native-webview": "11.23.0",
+    "expo-dev-client": "~1.3.1",
+    "expo-splash-screen": "~0.16.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
-    "@types/react": "~18.0.14",
+    "@babel/core": "^7.18.6",
+    "@types/react": "~18.0.0",
     "@types/react-native": "~0.69.1",
-    "typescript": "~4.3.5"
+    "typescript": "^4.6.3"
   },
   "private": true
 }
