--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@react-navigation/native-stack": "^6.9.1",
     "axios": "^1.1.3",
     "expo": "~46.0.16",
+    "expo-dev-client": "~1.3.1",
+    "expo-splash-screen": "~0.16.2",
     "expo-status-bar": "~1.4.0",
     "react": "18.0.0",
     "react-dom": "18.0.0",
@@ -24,10 +26,9 @@
     "react-native-plaid-link-sdk": "^8.0.1",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
+    "react-native-sweet-alert": "^3.5.0",
     "react-native-web": "~0.18.7",
-    "react-native-webview": "11.23.0",
-    "expo-dev-client": "~1.3.1",
-    "expo-splash-screen": "~0.16.2"
+    "react-native-webview": "11.23.0"
   },
   "devDependencies": {
     "@babel/core": "^7.18.6",
