--- a/package.json
+++ b/package.json
@@ -10,22 +10,27 @@
   "dependencies": {
     "@expo/webpack-config": "^0.17.0",
     "@react-native-async-storage/async-storage": "~1.17.3",
+    "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.1",
     "axios": "^1.1.3",
+    "currency-symbol-map": "^5.1.0",
     "expo": "~46.0.16",
     "expo-dev-client": "~1.3.1",
     "expo-splash-screen": "~0.16.2",
     "expo-status-bar": "~1.4.0",
+    "native-base": "^3.4.20",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-hook-form": "^7.38.0",
     "react-native": "0.69.6",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-loading-spinner-overlay": "^3.0.1",
     "react-native-modal": "^13.0.1",
     "react-native-plaid-link-sdk": "^8.0.1",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
+    "react-native-svg": "^13.5.0",
     "react-native-sweet-alert": "^3.5.0",
     "react-native-web": "~0.18.7",
     "react-native-webview": "11.23.0"
